[gd_scene load_steps=5 format=3 uid="uid://b37me7m5baxou"]

[ext_resource type="Script" uid="uid://cpyv3ghwfajnx" path="res://scripts/banana.gd" id="1_k14wv"]
[ext_resource type="Texture2D" uid="uid://d27afl8hp53lj" path="res://assets/images/Banana.png" id="2_y18op"]
[ext_resource type="AudioStream" uid="uid://gqplfkqy36i8" path="res://assets/sfx/Pickup15.wav" id="3_8us37"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sgcku"]

[node name="Banana" type="Area2D"]
script = ExtResource("1_k14wv")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_y18op")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.8, 1.8)
shape = SubResource("CircleShape2D_sgcku")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="PickupSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_8us37")
volume_db = -6.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
